2004-05-22  Francois Dumont  <dums@...>

	* src/num_put_float.cpp, stlport/stl/_num_put.h, stlport/stl/_num_put.c:
	Correction of the locale grouping schema application in case of the scientific
	output when there is no decimal point.

2004-05-19  Petr Ovtchenkov  <ptr@Island...>

	* stlport/stl/_tree.h, stlport/stl/debug/_tree.h: fix template parameters, see rec
	2004-05-14 below.

2004-05-16  Petr Ovtchenkov  <ptr@Island...>

	* Repository: STLport 5.0 RC1

2004-05-14  Francois Dumont  <dums@...>

	* stlport/stl/_tree.h, stlport/stl/_tree.c, stlport/stl/_set.h, stlport/stl/_map.h:
	Modification of the _Rb_tree implementation to restore the non mutability of the set
	iterators but to keep distinct type between it and the const_iterator.

2004-05-13  Francois Dumont  <dums@...>

	* stlport/config/stl_evc.h, test/unit/nmake-evc3.mak: Portage to the WinCE 3 platform.
	Thanks Michael Fink.

2004-05-13  Francois Dumont  <dums@s...>

	* stlport/stl/_set.h: Addition of the const/non-const methods for many methods now that
	iterator are not const_iterator anymore. Correction of the multiset interface to be
	homogeneous with the set interface.

2004-05-09  Francois Dumont  <dums@...>

	* stlport/stl/char_traits.h: Addition of the specific wchar_t static methods similar
	to the one of the char specialization calling the wide functions.

2004-05-08  Petr Ovtchenkov  <ptr@Island...>

	* stlport/stl/_set.h: fix definition of const/non-const for find and *_bound
	methods. Thanks KL for report.

2004-05-07  Petr Ovtchenkov  <ptr@Island...>

	* stlport/stl/_set.h: fix definition of const/non-const iterators.
	Thanks Ilya Chvetsov for report.

	* test/unit/set_test.cpp: test that detect bug above.

2004-04-27  Francois Dumont  <dums@s...>

	* stlport/stl/_complex.h: removal of a macro guard on the template != operator.

	* test/unit/complex_test.cpp: creation of a test case for the complex class.

2004-04-26  Francois Dumont  <dums@s...>
