@@ -50,7 +50,7 @@ public:
   typedef typename _Base::pointer pointer;
 # if defined (_STLP_MEMBER_TEMPLATE_CLASSES)
   template <class _Tp1> struct rebind {
-    typedef allocator<_Tp1> other;
+    typedef __iostring_allocator<_Tp1> other;
   };
 # endif
 
@@ -64,6 +64,17 @@ public:
     if (__p != _M_static_buf) _Base::deallocate(__p, __n);
   }
 };
+
+# if !defined (_STLP_USE_NESTED_TCLASS_THROUGHT_TPARAM) || !defined (_STLP_MEMBER_TEMPLATES)
+template <class _Tp1, class _Tp2>
+inline __iostring_allocator<_Tp2>& _STLP_CALL
+__stl_alloc_rebind(__iostring_allocator<_Tp1>& __a, const _Tp2*) {  return (__iostring_allocator<_Tp2>&)(__a); }
+template <class _Tp1, class _Tp2>
+inline __iostring_allocator<_Tp2> _STLP_CALL
+__stl_alloc_create(const __iostring_allocator<_Tp1>&, const _Tp2*) { return __iostring_allocator<_Tp2>(); }
+#endif /* _STLP_USE_NESTED_TCLASS_THROUGHT_TPARAM */
+
+
 
 #ifndef _STLP_DEBUG
 
